fixed first section with overflow auto on all 3 bg divs

--- a/Savy - Cyber Security Web/style.css
+++ b/Savy - Cyber Security Web/style.css
@@ -1,7 +1,12 @@
 body {
     font-size: 18px;
     font-family: 'Raleway', sans-serif;
-    background-color: #ffffff;
+}
+
+.body__hr {
+    width: 100%;
+    height: 2rem;
+    background-color: black;
 }
 
 .primary-btn {
@@ -50,12 +55,11 @@ body {
 .body-section__cyber-security {
     /* background-image: linear-gradient(to right, #d5f2f0, #ceecf0, #cae5f0, #c8deee, #c9d6ea, #d3d4e8, #ddd1e4, #e4d0de, #eed6db, #f3deda, #f3e7de, #f3f0e6); */
     height: 100vh;
-    margin-bottom: 10rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid lightsalmon;
     overflow: hidden;
+    position: relative;
 }
 
 .body-section__cyber-security__bg-left {
@@ -71,6 +75,7 @@ body {
     border-radius: 100%;
     z-index: -5;
     filter: blur(200px);
+    overflow: auto;
 }
 
 .body-section__cyber-security__bg-center {
@@ -85,6 +90,7 @@ body {
     border-radius: 100%;
     z-index: -10;
     filter: blur(516px);
+    overflow: auto;
 }
 .body-section__cyber-security__bg-right {
     position: absolute;
@@ -99,6 +105,7 @@ body {
     border-radius: 100%;
     z-index: -5;
     filter: blur(200px);
+    overflow: auto;
 }
 
 .section__cyber-security {
@@ -150,7 +157,6 @@ body {
     z-index: -10;
     position: relative;
     overflow: auto;
-    border: 2px solid red;
 }
 
 .body-section__providers__bg-right {
@@ -166,6 +172,7 @@ body {
     border-radius: 100%;
     z-index: -5;
     filter: blur(200px);
+    overflow: auto;
 }
 
 .body-section__providers-wrapper {
